--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 Flask-SocketIO==5.1.1
+gunicorn==20.1.0
 # greenlet==1.1.2
 importlib-metadata==4.8.1
 imutils==0.5.4
