--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ imutils==0.5.4
 MouseInfo==0.1.3
 numpy==1.21.3
 opencv-contrib-python==4.5.5.62
+opencv-python-headless==4.2.0.32
 # Pillow==8.4.0
 # protobuf==3.19.0
 PyAutoGUI==0.9.53
