--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ imutils==0.5.4
 MouseInfo==0.1.3
 numpy==1.21.3
 opencv-contrib-python==4.5.5.62
-opencv-python-headless==4.2.0.32
+opencv-python-headless==4.5.5.62
 # Pillow==8.4.0
 # protobuf==3.19.0
 PyAutoGUI==0.9.53
@@ -182,4 +182,4 @@ PyAutoGUI==0.9.53
 # six==1.16.0
 # typing-extensions==3.10.0.2
 # Werkzeug==2.0.2
-# zipp==3.6.0
+# zipp==3.6.0absl-py==0.15.0
