--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ imutils==0.5.4
 # MarkupSafe==2.0.1
 # matplotlib==3.4.3
 # mediapipe==0.8.8.1
-MouseInfo==0.1.3
+# MouseInfo==0.1.3
 numpy==1.21.3
 opencv-contrib-python==4.5.5.62
 opencv-python-headless==4.5.5.62
