--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-absl-py==0.15.0
-aniso8601==9.0.1
-attrs==21.2.0
-bidict==0.21.3
-click==8.0.3
-cycler==0.10.0
-dnspython==2.1.0
-eventlet==0.32.0
+# absl-py==0.15.0
+# aniso8601==9.0.1
+# attrs==21.2.0
+# bidict==0.21.3
+# click==8.0.3
+# cycler==0.10.0
+# dnspython==2.1.0
+# eventlet==0.32.0
+face-recognition-models==0.3.0
 Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 Flask-SocketIO==5.1.1
-gunicorn==20.1.0
 # greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.8.1
 imutils==0.5.4
 # itsdangerous==2.0.1
@@ -26,7 +27,7 @@ opencv-contrib-python==4.5.5.62
 opencv-python-headless==4.5.5.62
 # Pillow==8.4.0
 # protobuf==3.19.0
-PyAutoGUI==0.9.53
+# PyAutoGUI==0.9.53
 # PyGetWindow==0.0.9
 # PyMsgBox==1.0.9
 # pyobjc==8.2
@@ -182,4 +183,4 @@ PyAutoGUI==0.9.53
 # six==1.16.0
 # typing-extensions==3.10.0.2
 # Werkzeug==2.0.2
-# zipp==3.6.0absl-py==0.15.0
+# zipp==3.6.0
